--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [
     "nodebb",
     "plugin",
-    "openid",
+    "openid",s
     "steam",
     "sso",
     "single sign on",
@@ -27,7 +27,7 @@
   "readme": "",
   "readmeFilename": "README.md",
   "dependencies": {
-    "passport-steam": "~0.1.3"
+    "passport-steam": "~1.0.1"
   },
   "nbbpm": {
     "compatibility": "^1.0.1"
